--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,32 @@
 name: Deploy to GitHub Pages
+
 on:
   push:
     branches: [ main ]
+
+permissions:
+  contents: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Install and Build
+      - name: Checkout 🛎️
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js ⚙️
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install and Build 🔧
         run: |
           cd app
           npm install
           npm run build
-      - name: Deploy
+
+      - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: app/dist # Le dossier que le robot va créer
+          folder: app/dist
+          branch: gh-pages # Le robot va créer cette branche tout seul
