--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd app && npm install && npm run build",
-  "outputDirectory": "app/dist",
+  "buildCommand": "cd Application && npm install && npm run build",
+  "outputDirectory": "Application/dist",
   "framework": "vite"
 }
