--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd Application && npm install && npm run build",
+  "buildCommand": "cd Application && npm install --legacy-peer-deps && npm run build",
   "outputDirectory": "Application/dist",
-  "framework": "vite"
+  "framework": null
 }
