--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "rootDirectory": "Application",
+  "buildCommand": "npm install && vite build",
+  "outputDirectory": "dist",
   "framework": "vite"
 }
