--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-  "framework": "vite"
+  "buildCommand": "npm install && ./node_modules/.bin/vite build",
+  "outputDirectory": "dist",
+  "framework": null
 }
